add MIDI note playback mode to the playground

--- a/examples/playground/web/index.html
+++ b/examples/playground/web/index.html
@@ -26,8 +26,16 @@
         </div>
 
         <div class="transport">
-            <button id="playButton" title="Play"><i class="fas fa-play"></i></button>
-            <button id="stopButton" title="Stop"><i class="fas fa-stop"></i></button>
+            <button id="playButton" title="Start playback"><i class="fas fa-play"></i></button>
+            <button id="stopButton" title="Stop playback"><i class="fas fa-stop"></i></button>
+            <button id="midiButton" title="Play scripts polyphonically with MIDI Input">
+                <svg width="40" height="14" viewBox="10 0 62 20" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M10 0h8v20h-8zm9 0h8v20h-8zm9 0h8v20h-8zm9 0h8v20h-8zm9 0h8v20h-8zm9 0h8v20h-8zm9 0h8v20h-8z"
+                        fill="currentColor" stroke="black" stroke-width="0.5" />
+                    <path d="M15 0h6v12h-6zm9 0h6v12h-6zm18 0h6v12h-6zm9 0h6v12h-6zm9 0h6v12h-6z" fill="black" />
+                </svg>
+            </button>
 
             <div class="bpm-control">
                 <span>BPM:</span>
