--- a/examples/playground/web/index.html
+++ b/examples/playground/web/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>RECOMP</title>
+    <title>PTTRNS</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;700&display=swap">
     <link rel="stylesheet" href="./app.css">
@@ -18,7 +18,7 @@
     <div id="content">
         <div class="header">
             <div>
-                <h1 class="title">AFSEQ playground</h1>
+                <h1 class="title">pttrns playground</h1>
             </div>
             <div class="header-right">
                 <a href="https://emuell.github.io/afseq/" class="tutorial-link">Read the Tutorials</a>
