add global volume slider control to the playground

--- a/examples/playground/web/index.html
+++ b/examples/playground/web/index.html
@@ -67,6 +67,12 @@
                 <input type="number" id="bpmInput" value="120" min="60" max="300">
             </div>
 
+            <div class="volume-control">
+                <span>Volume:</span>
+                <input type="range" id="volumeSlider" min="0" max="142" value="71">
+                <input type="text" id="volumeInput">
+            </div>
+
             <div class="sample-control">
                 <span>Samples:</span>
                 <select id="sampleSelect">
