allow loading local sample files in playground

--- a/examples/playground/web/index.html
+++ b/examples/playground/web/index.html
@@ -78,6 +78,9 @@
                 <select id="sampleSelect">
                     <option value="none">Loading Samples...</option>
                 </select>
+                <button id="loadSampleButton" class="text-button" title="Load a local audio file (.wav, .flac, .mp3)">Load</button>
+                <button id="clearSamplesButton" class="text-button" title="Remove all loaded samples">Clear</button>
+                <input type="file" id="sampleFileInput" style="display: none;" accept=".wav,.flac,.mp3">
             </div>
         </div>
 
