add parameter controls to the playground

--- a/examples/playground/web/index.html
+++ b/examples/playground/web/index.html
@@ -86,6 +86,8 @@
             </div>
         </div>
 
+        <div id="parameters-container" class="parameters-container"></div>
+
         <div class="main-container">
             <div class="editor-column">
                 <div class="editor-status">
